non_executable_reasons_record_from_random_10k/5925.txt
3.6
An error occurred while executing the following cell:
------------------
import warnings
warnings.filterwarnings('ignore')
from __future__ import print_function
import IPython
import sys
from music21 import *
import numpy as np
from grammar import *
from qa import *
from preprocess import * 
from music_utils import *
from data_utils import *
from keras.models import load_model, Model
from keras.layers import Dense, Activation, Dropout, Input, LSTM, Reshape, Lambda, RepeatVector
from keras.initializers import glorot_uniform
from keras.utils import to_categorical
from keras.optimizers import Adam
from keras import backend as K
------------------

[0;36m  File [0;32m"<ipython-input-1-5def39fd1b34>"[0;36m, line [0;32m2[0m
[0;31m    warnings.filterwarnings('ignore')[0m
[0m         ^[0m
[0;31mSyntaxError[0m[0;31m:[0m import * only allowed at module level

SyntaxError: import * only allowed at module level (<ipython-input-1-5def39fd1b34>, line 2)

Executability                            : False
